<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.0">
  <DUT Name="ST_ReadListData" Id="{4e5213e3-ac25-4cd0-bcd3-8e0696bf7ac0}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_ReadListData :
STRUCT
	stReadListReturnInfo	: ARRAY [1..2] OF ST_UAReadListReturnInfo;
	nIntVar1				: INT; 
	nIntVar2				: INT; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>